--- a/src/index.html
+++ b/src/index.html
@@ -10,11 +10,16 @@
         <title>Подкаст Вопросы</title>
     </head>
     <body>
-        <button class="mui-btn mui-btn--fab mui-btn--danger floating-btn" id = "modal-btn">Все</button>
+        <button class="mui-btn mui-btn--fab mui-btn--danger floating-btn" id = "modal-btn">
+            <svg xmlns="http://www.w3.org/2000/svg" height="36px" viewBox="0 0 24 24" width="36px" fill="#FFFFFF"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM7.07 18.28c.43-.9 3.05-1.78 4.93-1.78s4.51.88 4.93 1.78C15.57 19.36 13.86 20 12 20s-3.57-.64-4.93-1.72zm11.29-1.45c-1.43-1.74-4.9-2.33-6.36-2.33s-4.93.59-6.36 2.33C4.62 15.49 4 13.82 4 12c0-4.41 3.59-8 8-8s8 3.59 8 8c0 1.82-.62 3.49-1.64 4.83zM12 6c-1.94 0-3.5 1.56-3.5 3.5S10.06 13 12 13s3.5-1.56 3.5-3.5S13.94 6 12 6zm0 5c-.83 0-1.5-.67-1.5-1.5S11.17 8 12 8s1.5.67 1.5 1.5S12.83 11 12 11z"/></svg></button>
         <div id="sidebar">
-        <div class="mui--text-white mui--text-display1 mui--align-vertical">Подкаст Вопросы
+        <div class="mui--text-white mui--text-display1 mui--align-vertical">You can ask me something
             <br>
-            <small class="author">by Rodion</small>
+            <div class="duck-picture">
+                <img src="../src/img/wing.png" alt="">
+            </div>
+            <span class="poscriptum">but it`s better not to do it</span>
+            <span class="author">Made by Rodion</span>
         </div>
         </div>
         <div id="content" class="mui-container-fluid">
@@ -22,7 +27,7 @@
             <div class="mui-col-sm-10 mui-col-sm-offset-1">
             <br>
             <br>
-            <div class="mui--text-black-54 mui--text-body2">Задай вопрос</div>
+            <div class="mui--text-black-54 mui--text-body2 ask-me">Есть вопросы?!?!?!</div>
             <div class="mui-divider"></div>
             <br>
             <!-- form -->
@@ -35,7 +40,7 @@
             </form>
             <br>
             <br>
-            <div class="mui--text-black-54 mui--text-body2">Ваши вопросы</div>
+            <div class="mui--text-black-54 mui--text-body2 ask-me">Ваши вопросы</div>
             <div class="mui-divider"></div>
             <br>
             <div id="list"></div>
